--- a/microservicecloud-config.yml
+++ b/microservicecloud-config.yml
@@ -5,7 +5,7 @@ spring:
 
 ---
 server:
-  prot: 8201
+  port: 8201
 spring:
   profiles: dev
   application:
@@ -16,7 +16,7 @@ eureka:
       defaultZone: http://eureka-dev.com:7001/eureka/
 ---
 server:
-  prot: 8202
+  port: 8202
 spring:
   profiles: test
   application:
