--- a/microservicecloud-config-deot-client.yml
+++ b/microservicecloud-config-deot-client.yml
@@ -56,7 +56,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springcloud_test
+    url: jdbc:mysql://localhost:3306/springcloud_test2
     username: root
     password: 123456
     dbcp2:
